<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">Add Participant</string>
    <string name="newevent_date_first">02-02-2017</string>
    <string name="newevent_date_label">Date?</string>
    <string name="participantspinner_label">Participant?</string>
    <string name="newevent_startTime_label">Start Time?</string>
    <string name="newevent_startTime_first">10:00</string>
    <string name="newevent_hint">Event Name?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="register_button">Register</string>
    <string name="newevent_endTime_label">End Time?</string>
    <string name="newevent_endTime_first">08:00</string>
    <string name="errormessage">Event name cannot be empty! Event end time cannot be before event start time!</string>
    <string name="addevent_button">ADD EVENT</string>
</resources>
