<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.eventregistration.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayoutErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/errorMessage"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRegisterParticipant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayoutErrorMessage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/participantspinner_label"/>

        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/participantspinner"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRegisterEvent"
        android:layout_below="@id/linearLayoutRegisterParticipant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/eventspinner_label"/>

        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/eventspinner"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRegisterButton"
        android:layout_below="@id/linearLayoutRegisterEvent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/register_button"
            android:onClick="register"/>

    </LinearLayout>

    <View
        android:layout_above="@+id/linearLayoutNewParticipant"
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#FFFFFF"/>

    <LinearLayout
        android:id="@+id/linearLayoutNewParticipant"
        android:layout_below="@id/linearLayoutRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newparticipant_name"
            android:hint="@string/newparticipant_hint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/newparticipant_button"
            android:onClick="addParticipant"/>
    </LinearLayout>

    <View
        android:layout_above="@+id/linearLayoutNewEvent"
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#FFFFFF"/>

    <LinearLayout
        android:id="@+id/linearLayoutNewEvent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/linearLayoutNewParticipant"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newevent_name"
            android:hint="@string/newevent_hint"/>
    </LinearLayout>

    <!-- LEFT COLUMN -->
    <LinearLayout
        android:id="@+id/linearLayoutNewEventLeft"
        android:layout_below="@id/linearLayoutNewEvent"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/newevent_date_label"/>

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/newevent_startTime_label"/>

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/newevent_endTime_label"/>

    </LinearLayout>

    <!-- RIGHT COLUMN -->

    <LinearLayout
        android:layout_below="@id/linearLayoutNewEventLeft"
        android:id="@+id/addEventButton"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/addevent_button"
            android:onClick="addEvent"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutNewEventRight"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayoutNewEvent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/newevent_date_first"
        android:layout_gravity="end"
        android:id="@+id/newevent_date"
        android:onClick="showDatePickerDialog"/>

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/newevent_startTime_first"
        android:layout_gravity="end"
        android:id="@+id/newevent_starttime"
        android:onClick="showTimePickerDialog"/>

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/newevent_endTime_first"
        android:layout_gravity="end"
        android:id="@+id/newevent_endtime"
        android:onClick="showTimePickerDialog"/>

    </LinearLayout>

</RelativeLayout>
